--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -58,8 +58,7 @@
 }
 
 .welcome {
-  background: #fff;
-  height: 100vh;
+  padding-bottom: 25px;
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -106,14 +105,6 @@
   z-index: 1;
 }
 
-.welcome:before {
-  left: -15vw;
-  top: -30%;
-  background: #fff;
-  background: linear-gradient(to right, #e2e7ef 0%, #ffffff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e7ef', endColorstr='#ffffff', GradientType=1);
-}
-
 @media (max-width: 991.98px) {
   .welcome:before {
     left: -30%;
@@ -124,14 +115,6 @@
   .welcome:before {
     left: -35%;
   }
-}
-
-.welcome:after {
-  right: -5vw;
-  top: -15%;
-  background: #ffffff;
-  background: linear-gradient(to right, #ffffff 0%, #e2e7ef 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e2e7ef', GradientType=1);
 }
 
 @media (max-width: 991.98px) {
@@ -190,69 +173,12 @@
 
 .page-content:before {
   content: '';
-  height: 500px;
   width: 100%;
   position: absolute;
   top: 0;
   right: 0;
   background: linear-gradient(to bottom, #ffffff 0%, #fafafa 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa', GradientType=0);
-}
-
-.page-content .color-wrapper {
-  float: left;
-}
-
-@media (max-width: 575.98px) {
-  .page-content .color-wrapper {
-    float: none;
-    max-width: 230px;
-    margin: 0 auto;
-  }
-}
-
-.page-content .color {
-  padding: 25px 20px;
-  text-align: center;
-  background: #fff;
-  margin-bottom: 30px;
-  box-shadow: 0 0 25px rgba(40, 47, 60, 0.05), 0 20px 25px rgba(40, 47, 60, 0.05), 0 3px 4px rgba(40, 47, 60, 0.05);
-}
-
-.page-content .color:last-child {
-  margin-right: 0;
-}
-
-.page-content .color .swatch {
-  position: relative;
-  border-radius: 50%;
-  margin: 0 auto 15px auto;
-  width: 110px;
-  height: 110px;
-}
-
-.page-content .color .title {
-  display: inline-block;
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  width: 100%;
-  font-size: 1rem;
-}
-
-.page-content .color .hex-value {
-  font-family: "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  color: #8f99ac;
-  font-size: 12px;
-  text-transform: uppercase;
-}
-
-.page-content .content .example {
-  margin: 45px 0 60px 0;
-}
-
-.page-content .content .example.emphasized {
-  padding: 25px 20px;
-  background: #fff;
-  box-shadow: 0 0 25px rgba(40, 47, 60, 0.05), 0 20px 25px rgba(40, 47, 60, 0.05), 0 3px 4px rgba(40, 47, 60, 0.05);
 }
 
 .page-content .content .table {
@@ -450,4 +376,13 @@
 
 .main-footer a:hover {
   text-decoration: none;
+}
+
+.input-group.input-group-seamless > .input-group-append,
+.input-group.input-group-seamless > .input-group-prepend {
+  bottom: unset;
+}
+
+.navbar-brand {
+  font-size: 20px;
 }
