--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -30,7 +30,7 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/ABGEO07/secretic">
+                <a class="nav-link" href="https://github.com/ABGEO07/secretic" target="_blank">
                     <i class="fa fa-github"></i>
                 </a>
             </li>
