--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -49,6 +49,12 @@
                         </div>
                     </div>
                     <div class="form-group col-md-12">
+                        <div class="custom-control custom-checkbox mb-3">
+                            <input type="checkbox" name="remember-me" class="custom-control-input" id="remember-me">
+                            <label class="custom-control-label" for="remember-me">დამიმახსოვრე</label>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-12">
                         <button type="submit" class="btn btn-primary block">შესვლა</button>
                         <a th:href="@{/registration}" class="btn btn-outline-light block">რეგისტრაცია</a>
                     </div>
