--- a/src/main/resources/templates/authentication/registration.html
+++ b/src/main/resources/templates/authentication/registration.html
@@ -9,9 +9,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-                <form autocomplete="off" th:action="@{/registration}" th:object="${user}"
+                <form autocomplete="off" th:action="@{/registration}" th:object="${userForm}"
                       th:classappend="${#fields.hasErrors()} ? 'was-validated' : null" method="post">
-
                     <div class="col-12">
                         <h2 class="form-text">რეგისტრაცია</h2>
                     </div>
@@ -55,8 +54,12 @@
                     </div>
                     <div class="form-group col-md-12">
                         <div class="custom-control custom-checkbox mb-3">
-                            <input type="checkbox" class="custom-control-input" id="terms" required>
+                            <input type="checkbox" th:field="*{agreedWithTerms}" class="custom-control-input" id="terms"
+                                   th:classappend="${#fields.hasErrors('agreedWithTerms')} ? 'is-invalid' : null"
+                                   required>
                             <label class="custom-control-label" for="terms">ვეთანხმები წესებს</label>
+                            <div class="invalid-feedback" th:if="${#fields.hasErrors('agreedWithTerms')}"
+                                 th:errors="*{agreedWithTerms}"></div>
                         </div>
                     </div>
                     <div class="form-group col-md-12">
