:sparkles: Implement basic user profile.

--- a/src/main/resources/templates/default/index.html
+++ b/src/main/resources/templates/default/index.html
@@ -9,7 +9,7 @@
     <div class="loader">
         <div class="page-loader"></div>
     </div>
-    <img th:src="@{assets/images/logo.png}" alt="Secretic" class="logo">
+    <img th:src="@{/assets/images/logo.png}" alt="Secretic" class="logo">
     <div class="welcome d-flex justify-content-center flex-column">
         <div class="inner-wrapper mt-auto mb-auto">
             <h1 class="slide-in text-secondary">Secret!c</h1>
