--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,11 +7,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Anonymous messaging system">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" th:href="@{favicon.ico}" type="image/x-icon" />
-    <link rel="stylesheet" th:href="@{assets/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{assets/css/font-awesome.min.css}">
-    <link rel="stylesheet" th:href="@{assets/css/shards.min.css}">
-    <link rel="stylesheet" th:href="@{assets/css/style.css}">
+    <link rel="icon" th:href="@{/favicon.ico}" type="image/x-icon" />
+    <link rel="stylesheet" th:href="@{/assets/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/font-awesome.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/shards.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/style.css}">
 </head>
 <body>
 <div class="page-content">
@@ -26,11 +26,11 @@
     </footer>
 </div>
 
-<script th:src="@{assets/js/jquery-3.2.1.min.js}"></script>
-<script th:src="@{assets/js/popper.min.js}"></script>
-<script th:src="@{assets/js/bootstrap.min.js}"></script>
-<script th:src="@{assets/js/shards.min.js}"></script>
-<script th:src="@{assets/js/script.js}"></script>
+<script th:src="@{/assets/js/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/assets/js/popper.min.js}"></script>
+<script th:src="@{/assets/js/bootstrap.min.js}"></script>
+<script th:src="@{/assets/js/shards.min.js}"></script>
+<script th:src="@{/assets/js/script.js}"></script>
 <th:block layout:fragment="scripts" />
 </body>
 </html>
