--- a/src/main/resources/templates/authentication/login.html
+++ b/src/main/resources/templates/authentication/login.html
@@ -9,9 +9,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-                <form autocomplete="off" th:action="@{/login}" method="post">
-                    <div class="col-12">
-                        <h2 class="form-text">შესვლა</h2>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="text-center card-title">შესვლა</h3>
 
                         <div class="alert alert-info alert-dismissible fade show" role="alert"
                              th:if="${message != null}">
@@ -21,7 +21,6 @@
                             <i class="fa fa-info"></i>
                             <span th:text="${message}" th:remove="tag"></span>
                         </div>
-
                         <div class="alert alert-danger alert-dismissible fade show" role="alert"
                              th:if="${error != null}">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -30,35 +29,37 @@
                             <i class="fa fa-exclamation-circle"></i>
                             <span th:text="${error}" th:remove="tag"></span>
                         </div>
-                    </div>
 
-                    <div class="form-group col-md-12">
-                        <div class="input-group input-group-seamless">
+                        <form autocomplete="off" th:action="@{/login}" method="post">
+                            <div class="form-group col-md-12">
+                                <div class="input-group input-group-seamless">
                             <span class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-user"></i></span>
                             </span>
-                            <input type="text" name="username" class="form-control" placeholder="მომხმარებლის სახელი" required/>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <div class="input-group input-group-seamless">
+                                    <input type="text" name="username" class="form-control" placeholder="მომხმარებლის სახელი" required/>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <div class="input-group input-group-seamless">
                             <span class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-lock"></i></span>
                             </span>
-                            <input type="password" name="password" class="form-control" placeholder="პაროლი" required/>
-                        </div>
+                                    <input type="password" name="password" class="form-control" placeholder="პაროლი" required/>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <div class="custom-control custom-checkbox mb-3">
+                                    <input type="checkbox" name="remember-me" class="custom-control-input" id="remember-me">
+                                    <label class="custom-control-label" for="remember-me">დამიმახსოვრე</label>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <button type="submit" class="btn btn-primary block">შესვლა</button>
+                                <a th:href="@{/registration}" class="btn btn-outline-light block">რეგისტრაცია</a>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group col-md-12">
-                        <div class="custom-control custom-checkbox mb-3">
-                            <input type="checkbox" name="remember-me" class="custom-control-input" id="remember-me">
-                            <label class="custom-control-label" for="remember-me">დამიმახსოვრე</label>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <button type="submit" class="btn btn-primary block">შესვლა</button>
-                        <a th:href="@{/registration}" class="btn btn-outline-light block">რეგისტრაცია</a>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
