--- a/src/main/resources/templates/authentication/registration.html
+++ b/src/main/resources/templates/authentication/registration.html
@@ -9,64 +9,67 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6 ml-auto mr-auto">
-                <form autocomplete="off" th:action="@{/registration}" th:object="${userForm}"
-                      th:classappend="${#fields.hasErrors()} ? 'was-validated' : null" method="post">
-                    <div class="col-12">
-                        <h2 class="form-text">რეგისტრაცია</h2>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="text-center card-title">რეგისტრაცია</h3>
+
+                        <form autocomplete="off" th:action="@{/registration}" th:object="${userForm}"
+                              th:classappend="${#fields.hasErrors()} ? 'was-validated' : null" method="post">
+                            <div class="form-group col-md-12">
+                                <div class="input-group input-group-seamless">
+                                    <span class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-user"></i></span>
+                                    </span>
+                                    <input type="text" th:field="*{username}" class="form-control"
+                                           placeholder="მომხმარებლის სახელი"
+                                           th:classappend="${#fields.hasErrors('username')} ? 'is-invalid' : null"
+                                           required/>
+                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('username')}"
+                                         th:errors="*{username}"></div>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <div class="input-group input-group-seamless">
+                                    <span class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-lock"></i></span>
+                                    </span>
+                                    <input type="password" th:field="*{password}" placeholder="პაროლი" class="form-control"
+                                           th:classappend="${#fields.hasErrors('password')} ? 'is-invalid' : null"
+                                           required/>
+                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}"
+                                         th:errors="*{password}"></div>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <div class="input-group input-group-seamless">
+                                    <span class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-lock"></i></span>
+                                    </span>
+                                    <input type="password" th:field="*{passwordConfirm}" placeholder="გაიმეორეთ პაროლი"
+                                           class="form-control"
+                                           th:classappend="${#fields.hasErrors('passwordConfirm')} ? 'is-invalid' : null"
+                                           required/>
+                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('passwordConfirm')}"
+                                         th:errors="*{passwordConfirm}"></div>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <div class="custom-control custom-checkbox mb-3">
+                                    <input type="checkbox" th:field="*{agreedWithTerms}" class="custom-control-input" id="terms"
+                                           th:classappend="${#fields.hasErrors('agreedWithTerms')} ? 'is-invalid' : null"
+                                           required>
+                                    <label class="custom-control-label" for="terms">ვეთანხმები წესებს</label>
+                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('agreedWithTerms')}"
+                                         th:errors="*{agreedWithTerms}"></div>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <button type="submit" class="btn btn-primary block">რეგისტრაცია</button>
+                                <a th:href="@{/login}" class="btn btn-outline-light block">შესვლა</a>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group col-md-12">
-                        <div class="input-group input-group-seamless">
-                            <span class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-user"></i></span>
-                            </span>
-                            <input type="text" th:field="*{username}" class="form-control"
-                                   placeholder="მომხმარებლის სახელი"
-                                   th:classappend="${#fields.hasErrors('username')} ? 'is-invalid' : null"
-                                   required/>
-                            <div class="invalid-feedback" th:if="${#fields.hasErrors('username')}"
-                                 th:errors="*{username}"></div>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <div class="input-group input-group-seamless">
-                            <span class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-lock"></i></span>
-                            </span>
-                            <input type="password" th:field="*{password}" placeholder="პაროლი" class="form-control"
-                                   th:classappend="${#fields.hasErrors('password')} ? 'is-invalid' : null"
-                                   required/>
-                            <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}"
-                                 th:errors="*{password}"></div>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <div class="input-group input-group-seamless">
-                            <span class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-lock"></i></span>
-                            </span>
-                            <input type="password" th:field="*{passwordConfirm}" placeholder="გაიმეორეთ პაროლი"
-                                   class="form-control"
-                                   th:classappend="${#fields.hasErrors('passwordConfirm')} ? 'is-invalid' : null"
-                                   required/>
-                            <div class="invalid-feedback" th:if="${#fields.hasErrors('passwordConfirm')}"
-                                 th:errors="*{passwordConfirm}"></div>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <div class="custom-control custom-checkbox mb-3">
-                            <input type="checkbox" th:field="*{agreedWithTerms}" class="custom-control-input" id="terms"
-                                   th:classappend="${#fields.hasErrors('agreedWithTerms')} ? 'is-invalid' : null"
-                                   required>
-                            <label class="custom-control-label" for="terms">ვეთანხმები წესებს</label>
-                            <div class="invalid-feedback" th:if="${#fields.hasErrors('agreedWithTerms')}"
-                                 th:errors="*{agreedWithTerms}"></div>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <button type="submit" class="btn btn-primary block">რეგისტრაცია</button>
-                        <a th:href="@{/login}" class="btn btn-outline-light block">შესვლა</a>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
