--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4" th:fragment="navbar">
-    <img th:src="@{assets/images/logo.png}" alt="Navbar" class="mr-2" height="50">
+    <img th:src="@{/assets/images/logo.png}" alt="Navbar" class="mr-2" height="50">
     <a class="navbar-brand" th:href="@{/}">Secret!c</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown"
@@ -20,7 +20,8 @@
                     <span sec:authentication="name" th:remove="tag"></span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarUserMenu">
-                    <a class="dropdown-item" href="#">ჩემი პროფილი</a>
+                    <a class="dropdown-item" th:classappend="${currentUri == ('/user/' + name)} ? 'active' : null"
+                       th:href="@{'/user/' + ${#authentication.name}}">ჩემი პროფილი</a>
                     <a class="dropdown-item" th:classappend="${currentUri == '/edit-profile'} ? 'active' : null"
                        th:href="@{/edit-profile}">პროფილის რედაქტირება</a>
                     <a class="dropdown-item text-danger" th:href="@{/logout}">გასვლა</a>
