--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -28,10 +28,10 @@
 
                         <th:block th:if="${user.username} != ${#authentication.name}">
                             <div class="col-12 mt-5">
-                                <form th:action="@{'/user/' + ${user.username} + '/submit-post'}" method="post">
+                                <form name="create-post" th:action="@{'/post/' + ${user.username}}" method="post">
                                     <div class="row">
                                         <div class="form-group col-md-12">
-                                            <textarea class="form-control" name="message" rows="2" required
+                                            <textarea class="form-control" name="text" rows="2" required
                                                       placeholder="რას ფიქრობ ჩემზე?"></textarea>
                                         </div>
 
@@ -41,9 +41,9 @@
                                             </button>
 
                                             <div class="custom-control pull-right mt-2 mr-3">
-                                                <input type="checkbox" name="anonymly" class="custom-control-input"
-                                                       id="anonymly" checked>
-                                                <label class="custom-control-label" for="anonymly">ანონიმურად</label>
+                                                <input type="checkbox" name="anonym" class="custom-control-input"
+                                                       id="anonym" checked>
+                                                <label class="custom-control-label" for="anonym">ანონიმურად</label>
                                             </div>
 
                                             <div class="mt-2">
@@ -102,7 +102,7 @@
                                     </div>
                                 </th:block>
                             </div>
-                            <div th:if="${posts.empty}" class="mt-5">
+                            <div th:if="${posts.empty}" class="timeline-empty mt-5">
                                 <p class="text-muted text-center">
                                     მომხმარებლის კედელი ცარიელია. გააზიარე თუ რას ფიქრობ მასზე.
                                 </p>
