:sparkles: Implement basic notifications system with socket.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -28,9 +28,12 @@
 
 <script th:src="@{/assets/js/jquery-3.2.1.min.js}"></script>
 <script th:src="@{/assets/js/popper.min.js}"></script>
+<script th:src="@{/assets/js/sockjs.min.js}"></script>
+<script th:src="@{/assets/js/stomp.min.js}"></script>
 <script th:src="@{/assets/js/bootstrap.min.js}"></script>
 <script th:src="@{/assets/js/shards.min.js}"></script>
 <script th:src="@{/assets/js/script.js}"></script>
+<script th:src="@{/assets/js/notification.js}"></script>
 <th:block layout:fragment="scripts" />
 </body>
 </html>
