--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -386,3 +386,91 @@
 .navbar-brand {
   font-size: 20px;
 }
+
+.notifications-head {
+  padding: 5px 15px;
+  border-radius: 3px 3px 0 0;
+}
+
+.notifications-container {
+  max-height: 300px;
+  overflow: auto;
+}
+
+.notifications-footer {
+  padding: 5px 15px;
+  border-radius: 0 0 3px 3px;
+}
+
+.notification-dropdown {
+  top: 60px;
+  right: 0;
+  left: unset;
+  width: 460px;
+  box-shadow: 0 5px 7px -1px #c1c1c1;
+  padding: 0;
+}
+
+.notification-dropdown a {
+  text-decoration: none;
+}
+
+.notification-dropdown:before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  right: 12px;
+}
+
+.notification-dropdown-item {
+  white-space: normal;
+}
+
+.notification-dropdown-item:active,
+.notification-dropdown-item.active {
+  color: #1d1e1f;
+  text-decoration: none;
+  background-color: #f7f7f9;
+}
+
+.notification-dropdown-item:hover .notification-read {
+  color: #34495E;
+}
+
+.notification-dropdown-menu {
+  padding-bottom: 0;
+  min-width: 300px;
+}
+
+.notifications-body {
+  display: inline-block;
+}
+
+.notification-title {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.notification-text {
+  text-align: left;
+  margin: 0;
+}
+
+.notification-date {
+  text-align: left;
+  color: #2980b9;
+  margin: 3px 0 0;
+}
+
+.notification-unread {
+  text-decoration: none;
+  background-color: #ebebed;
+}
+
+@media (max-width: 640px) {
+  .notification-dropdown {
+    top: 50px;
+    left: -16px;
+    width: 290px;
+  }
+}
